src/tests/snapshots/synoik__tests__window_opening__check_target_output_and_workspace@out1-fsT.snap
---
source: src/tests/window_opening.rs
description: "open on output: headless-1\nopen fullscreen: true"
expression: snapshot
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
